@@ -823,6 +823,7 @@ initFeatures()
   defFeature("unknown", FT_ATOM, "error");
   defFeature("debug", FT_BOOL, FALSE, 0);
   defFeature("verbose", FT_ATOM|FF_KEEP, GD->options.silent ? "silent" : "normal");
+  defFeature("verbose_load", FT_BOOL, TRUE, 0);
   defFeature("allow_variable_name_as_functor", FT_BOOL, FALSE,
 	     ALLOW_VARNAME_FUNCTOR);
   defFeature("toplevel_var_size", FT_INTEGER, 1000);
