@@ -7,6 +7,9 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ADDED: Prolog flag verbose_load to get status of silent(Bool) from
+    load_files/2.  Tom Schrijvers.
+
   * ADDED: First version of new time support.  With input from various
     users from the mainlinglist.
 
